# mirlib

./: .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  find_arduino_paths.sh  keywords.txt  library.json  library.properties
examples/AdvancedClient/: AdvancedClient.ino
examples/BasicClient/: BasicClient.ino
examples/GenerationDetection/: GenerationDetection.ino
examples/MeterSimulator/: MeterSimulator.ino
src/: Mirlib.cpp  Mirlib.h  MirlibBase.cpp  MirlibBase.h  MirlibClient.cpp  MirlibClient.h  MirlibDebug.h  MirlibErrors.h  MirlibServer.cpp  MirlibServer.h  ProtocolTypes.h  ProtocolUtils.cpp  ProtocolUtils.h
src/Commands/: BaseCommand.h  GetInfoCommand.h  PingCommand.h  ReadDateTimeCommand.h  ReadInstantValueCommand.h  ReadStatusCommand.h
